Removing temp folder

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     ).done(function(response){
                         console.log(response);
                  });
-            window.open("temp/"+sessionId+"/init.html");
+            window.open(sessionId+"/init.html");
         }
         
         
