--- a/example6/WebResTrackApplication.html
+++ b/example6/WebResTrackApplication.html
@@ -42,7 +42,7 @@
  	//Function to extract media sample data and push to the browser
  	//Timeout is used just to see init message display before 1st media display in browser.
  	setTimeout(function(){extractSampleAndPush(trackDataXml,template,sampleCount);},0);
- 	
+
      }
      //Function to extract init data from track file data and update to the Application
      function extractInitAndUpdateApp(initElem)
@@ -63,10 +63,12 @@
              var decodeDur=sampleElement[0].getAttribute("decodeDur");
              var sampleType=sampleElement[0].getAttribute("sampleType");
              var sampleData=sampleElement[0].getElementsByTagName("script")[0].childNodes[0].nodeValue;
- 	     setTimeout(function(){winHandle.postMessage(sampleData, "*");},0)
+             payload = [sampleData,decodeDur];
+	     winHandle.postMessage(payload, "*");
+
              sampleNum+=1;
-             //Next segment extraction depending on the decode duration mentioned in the current sample.
-             setTimeout(function(){extractSampleAndPush(trackDataXml,template,sampleCount);},decodeDur*1000)
+             //Next segment extraction.
+             extractSampleAndPush(trackDataXml,template,sampleCount);
 
          }
      }
@@ -96,8 +98,9 @@
 
      function replaceSpecialchar(inString)
      {
-	 var outstring=inString.replace("&lt;","<");
-	 return outstring;
+	var outstring=inString.split("&lt;").join("<");
+	outstring=outstring.split("&amp;").join("&");
+	return outstring;
      }
 	    
    </script>
